--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hono/route-spec",
+  "name": "@farhantallei/hono-route-spec",
   "version": "0.1.0",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
