--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@farhantallei/hono-route-spec",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "homepage": "https://github.com/farhantallei/hono-route-spec",
@@ -11,28 +11,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@hono/standard-validator": "^0.1.5",
-    "@standard-community/standard-json": "^0.3.3",
-    "@standard-community/standard-openapi": "^0.2.4",
-    "@standard-schema/spec": "^1.0.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/bun": "latest",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.36.0",
     "hono": "^4.9.8",
-    "hono-openapi": "^1.0.8",
-    "openapi-types": "^12.1.3",
     "prettier": "^3.6.2",
     "publint": "^0.3.13",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
     "vitest": "^3.2.4",
     "zod": "^4.1.11"
-  },
-  "peerDependencies": {
-    "hono": "^4.9.0",
-    "hono-openapi": ">=1.0.8"
   },
   "exports": {
     ".": {
@@ -65,5 +55,13 @@
     "prepublishOnly": "bun run build"
   },
   "type": "module",
-  "types": "./dist/index.d.ts"
+  "types": "./dist/index.d.ts",
+  "dependencies": {
+    "@hono/standard-validator": "^0.1.5",
+    "@standard-community/standard-json": "^0.3.3",
+    "@standard-community/standard-openapi": "^0.2.4",
+    "@standard-schema/spec": "^1.0.0",
+    "hono-openapi": "^1.0.8",
+    "openapi-types": "^12.1.3"
+  }
 }
